** Release Notes

1.5.27
  * added non-ascii file/dataset name check
  * added consolidate when --notExpandBlah

1.5.26
  * to use PANDA_AUTH_ID_TOKEN in Client

1.5.24
  * removed getCachePrefixes and getCmtConfigList for installedSW retirement

1.5.23
  * keep port number of sandbox host

1.5.22
  * fixed archive making in pchain

1.5.21
  * fixed for --flag in Derivation_tf.py

1.5.20
  * added increase_attempt_nr

1.5.19
  * cleanup

1.5.18
  * changed definition of --memroy of pathena/prun to memory size per core

1.5.17
  * added --extFile to pchain
  * improved the error message in pchain in case of wrong argument

1.5.16
  * fixed BS for rel 22

1.5.15
  * message cleanup

1.5.14
  * added PANDA_BEHIND_REAL_LB
  * added getFile

1.5.13
  * to allow https in PANDA_URL

1.5.12
  * fixed 1.5.11

1.5.11
  * added --secondaryDSs and --notExpandSecDSs to pathena

1.5.10
  * fixed GRL for py3

1.5.9
  * added --fixedCpuTime to pathena/prun

1.5.8
  * fixed --architecture of pathena/prun to keep cmtconfig stuff in task.architecture

1.5.7
  * added --vo, --prodSourceLabel, and --workingGroup to pchain

1.5.6
  * added PANDACACHE_URL

1.5.5
  * fixed setup.sh for sl6

1.5.4
  * to set PYTHONPATH consistent with python version
  * fixed --debugMode

1.5.3
  * using pandacache:443

1.5.2
  * made --nFiles=-1 work in prun
  * more messages for OIDC
  * reduced frequency of token refresh

1.5.1
  * fixed OIDC for new ATLAS panda server URL

1.5.0
  * added is_file to set_secret in pbook

1.4.99
  * loader in iDDS API

1.4.98
  * fixed share/function for old bash in SL6

1.4.97
  * typo

1.4.96
  * --intrSrv in pchain
  * fixed kill_workflow in pbook
  * fixed architecture in prun

1.4.95
  * using 25080 for http

1.4.94
  * to allow named arguments in pbook.retry()

1.4.93
  * add secret functions to pbook
  * --useSecrets in prun

1.4.92
  * using 80 and 443 to access the panda server
  * protection against @ in --architecture